kubernetes/manifests/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: titanic-api
spec:
  type: ClusterIP
  selector:
    app: titanic-api
  ports:
    - port: 80
      targetPort: 5000
