kubernetes/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: titanic-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: titanic.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: titanic-api
                port:
                  number: 80
